# radxproj

./: .gitignore  Makefile  New.params  Old.params  README.md  README_INSTALL_BIN.TXT  Radx2Grid.params  build.sh  build_radx  config.h  config.h.in  config.status  configure  configure.ac  configure.bak  configure.base.shared  configure.origin.ac  libtool  makefile  makefile.am  makefile.in  radx2grid.pro
KCLE2012122617/: _latest_data_info  _latest_data_info.buf  _latest_data_info.stat  convert_params  grid_params
KCLE2012122617/20121226/: ncf_20121226_171035.cdl  ncf_20121226_171035.nc  ncf_20121226_171616.nc  ncf_20121226_172155.nc  ncf_20121226_172735.nc  ncf_20121226_173315.nc  ncf_20121226_173855.nc  ncf_20121226_174437.nc  ncf_20121226_175017.nc  ncf_20121226_175557.nc  ncf_20121226_180137.nc
KCLE2012122617/grids/: _latest_data_info.stat  _latest_data_info.xml
apps/: makefile  makefile.am  makefile.in
apps/Radx/: makefile  makefile.am  makefile.in
apps/_makefiles/: Makefile.cip  Makefile.micro  makefile.epoch
autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
distribs/radx/: build_netcdf  check_apps  check_build  check_libs  configure.base  create_radx_params_and_usage  create_radx_release  do_src_checkout  install_bin_release  install_devel_release  install_src_release  prepare_src_release  radx.rb
libs_not_used/: makefile  makefile.am  makefile.in
libs_not_used/Fmq/: makefile  makefile.am  makefile.in
libs_not_used/Mdv/: makefile  makefile.am  makefile.in
libs_not_used/Radx/: makefile  makefile.am  makefile.in
libs_not_used/Spdb/: makefile  makefile.am  makefile.in
libs_not_used/_makefiles/: Makefile.analysis  Makefile.cip  Makefile.cip_test_harness  Makefile.cipak  Makefile.fip  Makefile.fip_deployed  Makefile.fip_plot  Makefile.fip_test_harness  Makefile.fipak  Makefile.ipa  Makefile.nirss  _Makefile.RDA  makefile.CIDD  makefile.CoSPA  makefile.CoSPA_Ops  makefile.CoSPA_TechTransferTest  makefile.ConvWx_Ops  makefile.ConvWx_full_code_nonrelease  makefile.ConvWx_full_code_release  makefile.Dcit  makefile.DsService  makefile.EPOCH_Ops  makefile.HWT  makefile.IHL  makefile.InsituTurb  makefile.MCS_ConvInit  makefile.Niwot  makefile.NiwotBeijing  makefile.NiwotCospa  makefile.RADIA_NSSL  makefile.REPoH  makefile.RalRadarLibs  makefile.SPIPA_tech_transfer  makefile.Thor  makefile.Thor2005  makefile.TurbRemoteSensing  makefile.Windshear  makefile.WindshearNoNetCDF  makefile.adds  makefile.adjoint  (+65 more)
libs_not_used/dataport/: makefile  makefile.am  makefile.in
libs_not_used/didss/: makefile  makefile.am  makefile.in
libs_not_used/dsdata/: makefile  makefile.am  makefile.in
libs_not_used/dsserver/: makefile  makefile.am  makefile.in
libs_not_used/euclid/: makefile  makefile.am  makefile.in
libs_not_used/kd/: makefile  makefile.am  makefile.in
libs_not_used/physics/: makefile  makefile.am  makefile.in
libs_not_used/radar/: makefile  makefile.am  makefile.in
libs_not_used/rapformats/: makefile  makefile.am  makefile.in
libs_not_used/rapmath/: makefile  makefile.am  makefile.in
libs_not_used/tdrp/: makefile  makefile.am  makefile.in
libs_not_used/toolsa/: makefile  makefile.am  makefile.in
make_bin/: installOriginLibFiles.py
make_include/: rap_make.ATEC_64_32MODE  rap_make.LINUX_64
not_used/Dsr2Radx/: Dsr2Radx  makefile  makefile.am  makefile.in
not_used/FixCfradialPaths/: FixCfradialPaths  makefile  makefile.am  makefile.in
not_used/FixRadxPointing/: FixRadxPointing  makefile  makefile.am  makefile.in
not_used/Hsrl2Radx/: Args.cc  MslFile.cc
not_used/Radx2Dsr/: Radx2Dsr  makefile  makefile.am  makefile.in
not_used/RadxCheck/: RadxCheck  makefile  makefile.am  makefile.in
not_used/RadxClutMon/: RadxClutMon  makefile  makefile.am  makefile.in
not_used/RadxConvert/: Args.cc  Params.cc  Params.hh  RadxConvert  RadxConvert.cc  makefile  makefile.am  makefile.in  paramdef.RadxConvert
not_used/RadxCov2Mom/: RadxCov2Mom  makefile  makefile.am  makefile.in
not_used/RadxDiff/: RadxDiff  makefile  makefile.am  makefile.in
not_used/RadxDwellCombine/: RadxDwellCombine  makefile  makefile.am  makefile.in
not_used/RadxEvad/: RadxEvad  makefile  makefile.am  makefile.in
not_used/RadxFilter/: RadxFilter  makefile  makefile.am  makefile.in
not_used/RadxMergeFields/: RadxMergeFields  makefile  makefile.am  makefile.in
not_used/RadxMon/: Args.cc  RadxMon  makefile  makefile.am  makefile.in
not_used/RadxPartRain/: ComputeEngine.cc  ComputeEngine.hh  Params.cc  Params.hh  RadxPartRain  RadxPartRain.cc  makefile  makefile.am  makefile.in  paramdef.RadxPartRain
not_used/RadxPrint/: RadxPrint  makefile  (+2 more)
parallel_studio_xe_2018_update1_cluster_edition_online/: cd_eject.sh  install.sh  product.xml  silent.cfg
wct-4.1.0/: cdm-checker  wct-export  wct-viewer  wctBatchConfig.xml
(+384 files in other folders)
